--- a/src/Components/Article/Article.css
+++ b/src/Components/Article/Article.css
@@ -1,4 +1,4 @@
-.report{
+.article {
     color: aliceblue;
     border: 200px;
     border: 1px solid rgb(226, 214, 214);
@@ -12,5 +12,4 @@
     margin-right: auto;
     background-color: rgba(0, 0, 0, 0.616);
     padding: 5px;
-    text-align: center;
   }
