--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -6,7 +6,6 @@
     margin-top: 10px;
     margin-left: 280px;
     margin-right: 280px;
-    color:rgb(0, 0, 0);
+    color:white;
     border-radius: 15px;
-    background-image: radial-gradient(black, grey, rgb(0, 4, 29));
 }
