--- a/src/Components/Article/Article.css
+++ b/src/Components/Article/Article.css
@@ -5,11 +5,31 @@
     border-radius: 5px;
     margin: 10px;
     width: 600px;
-    min-width:600px;
-    min-height: 620px;
-    height: 600px;
+    min-width: 600px;
+    height: 300px;
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(0, 0, 0, 0.616);
     padding: 5px;
+    text-align: center;
   }
+
+  .author {
+    font-size: 8px;
+    padding-top: 100px;
+  }
+
+  .link{
+    color:azure;
+    text-decoration: none;
+  }
+
+.link:hover {
+ color: rgba(175, 175, 255, 0.863);
+ text-decoration: none;
+}
+
+.link:active {
+  color: rgba(21, 255, 255, 0.288);
+  text-decoration: none;
+}
